k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gnv-onboard
  labels:
    app.kubernetes.io/name: gnv-onboard
